--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,7 @@
             });
     </script>
     <script src="controllers/adminControllers.js"></script>
+    <script src="controllers/adminProductControllers.js"></script>
 </head>
 <body>
     <ng-view />
